parse.output
Terminals which are not used

   FUNCTION_NAME
   CONTINUE
   VARLIST


State 31 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 64 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: line
    2        | program '\n'
    3        | program '\n' line
    4        | program error '\n'

    5 @1: /* empty */

    6 line: NUMBER @1 statements

    7 statements: statement
    8           | statement ';' statements

    9 statement: /* empty */
   10          | ASK printlist
   11          | COMMENT
   12          | DO NUMBER
   13          | ERASE
   14          | ERASE ALL
   15          | ERASE NUMBER
   16          | MODIFY NUMBER
   17          | FOR variable '=' expression ',' expression
   18          | FOR variable '=' expression ',' expression ',' expression
   19          | GO
   20          | GOTO
   21          | GOTO NUMBER
   22          | IF '(' expression ')' NUMBER
   23          | IF '(' expression ')' NUMBER ',' NUMBER
   24          | IF '(' expression ')' NUMBER ',' NUMBER ',' NUMBER
   25          | LIBRARY CALL STRING
   26          | LIBRARY SAVE STRING
   27          | LIBRARY RUN STRING
   28          | QUIT
   29          | RETURN
   30          | SET variable '=' expression
   31          | TYPE printlist
   32          | TYPE '$'
   33          | WRITE
   34          | WRITE expression

   35 expression: expression2

   36 expression2: expression3
   37            | expression2 e2op expression3

   38 e2op: '+'
   39     | '-'

   40 expression3: expression4
   41            | expression3 term expression4

   42 term: '*'
   43     | '/'
   44     | '^'

   45 expression4: function
   46            | unary_op function

   47 unary_op: '-'

   48 function: factor
   49         | fn_0
   50         | fn_0 '(' ')'
   51         | fn_0 '[' ']'
   52         | fn_0 '<' '>'
   53         | fn_0 '(' expression ')'
   54         | fn_0 '[' expression ']'
   55         | fn_0 '<' expression '>'
   56         | fn_1 '(' expression ')'
   57         | fn_1 '[' expression ']'
   58         | fn_1 '<' expression '>'

   59 fn_0: FRAN
   60     | FIN

   61 fn_1: FABS
   62     | FADC
   63     | FATN
   64     | FCOM
   65     | FCOS
   66     | FEXP
   67     | FDIS
   68     | FDXS
   69     | FITR
   70     | FLOG
   71     | FNEW
   72     | FSQT
   73     | FSGN
   74     | FSIN
   75     | FOUT

   76 factor: NUMBER
   77       | NUMSTR
   78       | STRING
   79       | variable
   80       | '(' expression ')'
   81       | '[' expression ']'
   82       | '<' expression '>'

   83 variable: VARIABLE_NAME
   84         | VARIABLE_NAME '(' exprlist ')'

   85 printlist: expression
   86          | printlist expression
   87          | printsep
   88          | printlist printsep
   89          | FMTSTR
   90          | printlist FMTSTR
   91          | '%'
   92          | printlist '%'

   93 printsep: ','
   94         | '!'
   95         | '#'
   96         | ':'

   97 exprlist: expression
   98         | exprlist ',' expression


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 4
'!' (33) 94
'#' (35) 95
'$' (36) 32
'%' (37) 91 92
'(' (40) 22 23 24 50 53 56 80 84
')' (41) 22 23 24 50 53 56 80 84
'*' (42) 42
'+' (43) 38
',' (44) 17 18 23 24 93 98
'-' (45) 39 47
'/' (47) 43
':' (58) 96
';' (59) 8
'<' (60) 52 55 58 82
'=' (61) 17 18 30
'>' (62) 52 55 58 82
'[' (91) 51 54 57 81
']' (93) 51 54 57 81
'^' (94) 44
error (256) 4
STRING (258) 25 26 27 78
NUMBER (259) 6 12 15 16 21 22 23 24 76
NUMSTR (260) 77
FMTSTR (261) 89 90
VARIABLE_NAME (262) 83 84
FUNCTION_NAME (263)
ASK (264) 10
COMMENT (265) 11
CONTINUE (266)
DO (267) 12
ERASE (268) 13 14 15
FOR (269) 17 18
GO (270) 19
GOTO (271) 20 21
IF (272) 22 23 24
MODIFY (273) 16
QUIT (274) 28
RETURN (275) 29
SET (276) 30
TYPE (277) 31 32
WRITE (278) 33 34
LIBRARY (279) 25 26 27
CALL (280) 25
SAVE (281) 26
RUN (282) 27
ALL (283) 14
FABS (284) 61
FATN (285) 63
FCOS (286) 65
FEXP (287) 66
FITR (288) 69
FLOG (289) 70
FRAN (290) 59
FSGN (291) 73
FSIN (292) 74
FSQT (293) 72
FADC (294) 62
FDIS (295) 67
FDXS (296) 68
FCOM (297) 64
FNEW (298) 71
FIN (299) 60
FOUT (300) 75
VARLIST (301)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1 2 3 4, on right: 0 2 3 4
line (69)
    on left: 6, on right: 1 3
@1 (70)
    on left: 5, on right: 6
statements (71)
    on left: 7 8, on right: 6 8
statement (72)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34, on right: 7 8
expression (73)
    on left: 35, on right: 17 18 22 23 24 30 34 53 54 55 56 57 58 80
    81 82 85 86 97 98
expression2 (74)
    on left: 36 37, on right: 35 37
e2op (75)
    on left: 38 39, on right: 37
expression3 (76)
    on left: 40 41, on right: 36 37 41
term (77)
    on left: 42 43 44, on right: 41
expression4 (78)
    on left: 45 46, on right: 40 41
unary_op (79)
    on left: 47, on right: 46
function (80)
    on left: 48 49 50 51 52 53 54 55 56 57 58, on right: 45 46
fn_0 (81)
    on left: 59 60, on right: 49 50 51 52 53 54 55
fn_1 (82)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75,
    on right: 56 57 58
factor (83)
    on left: 76 77 78 79 80 81 82, on right: 48
variable (84)
    on left: 83 84, on right: 17 18 30 79
printlist (85)
    on left: 85 86 87 88 89 90 91 92, on right: 10 31 86 88 90 92
printsep (86)
    on left: 93 94 95 96, on right: 87 88
exprlist (87)
    on left: 97 98, on right: 84 98


state 0

    0 $accept: . program $end

    NUMBER  shift, and go to state 1

    program  go to state 2
    line     go to state 3


state 1

    6 line: NUMBER . @1 statements

    $default  reduce using rule 5 (@1)

    @1  go to state 4


state 2

    0 $accept: program . $end
    2 program: program . '\n'
    3        | program . '\n' line
    4        | program . error '\n'

    $end   shift, and go to state 5
    error  shift, and go to state 6
    '\n'   shift, and go to state 7


state 3

    1 program: line .

    $default  reduce using rule 1 (program)


state 4

    6 line: NUMBER @1 . statements

    ASK      shift, and go to state 8
    COMMENT  shift, and go to state 9
    DO       shift, and go to state 10
    ERASE    shift, and go to state 11
    FOR      shift, and go to state 12
    GO       shift, and go to state 13
    GOTO     shift, and go to state 14
    IF       shift, and go to state 15
    MODIFY   shift, and go to state 16
    QUIT     shift, and go to state 17
    RETURN   shift, and go to state 18
    SET      shift, and go to state 19
    TYPE     shift, and go to state 20
    WRITE    shift, and go to state 21
    LIBRARY  shift, and go to state 22

    $default  reduce using rule 9 (statement)

    statements  go to state 23
    statement   go to state 24


state 5

    0 $accept: program $end .

    $default  accept


state 6

    4 program: program error . '\n'

    '\n'  shift, and go to state 25


state 7

    2 program: program '\n' .
    3        | program '\n' . line

    NUMBER  shift, and go to state 1

    $default  reduce using rule 2 (program)

    line  go to state 26


state 8

   10 statement: ASK . printlist

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    FMTSTR         shift, and go to state 30
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    ','            shift, and go to state 49
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53
    '%'            shift, and go to state 54
    '!'            shift, and go to state 55
    '#'            shift, and go to state 56
    ':'            shift, and go to state 57

    expression   go to state 58
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67
    printlist    go to state 68
    printsep     go to state 69


state 9

   11 statement: COMMENT .

    $default  reduce using rule 11 (statement)


state 10

   12 statement: DO . NUMBER

    NUMBER  shift, and go to state 70


state 11

   13 statement: ERASE .
   14          | ERASE . ALL
   15          | ERASE . NUMBER

    NUMBER  shift, and go to state 71
    ALL     shift, and go to state 72

    $default  reduce using rule 13 (statement)


state 12

   17 statement: FOR . variable '=' expression ',' expression
   18          | FOR . variable '=' expression ',' expression ',' expression

    VARIABLE_NAME  shift, and go to state 31

    variable  go to state 73


state 13

   19 statement: GO .

    $default  reduce using rule 19 (statement)


state 14

   20 statement: GOTO .
   21          | GOTO . NUMBER

    NUMBER  shift, and go to state 74

    $default  reduce using rule 20 (statement)


state 15

   22 statement: IF . '(' expression ')' NUMBER
   23          | IF . '(' expression ')' NUMBER ',' NUMBER
   24          | IF . '(' expression ')' NUMBER ',' NUMBER ',' NUMBER

    '('  shift, and go to state 75


state 16

   16 statement: MODIFY . NUMBER

    NUMBER  shift, and go to state 76


state 17

   28 statement: QUIT .

    $default  reduce using rule 28 (statement)


state 18

   29 statement: RETURN .

    $default  reduce using rule 29 (statement)


state 19

   30 statement: SET . variable '=' expression

    VARIABLE_NAME  shift, and go to state 31

    variable  go to state 77


state 20

   31 statement: TYPE . printlist
   32          | TYPE . '$'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    FMTSTR         shift, and go to state 30
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    ','            shift, and go to state 49
    '('            shift, and go to state 50
    '$'            shift, and go to state 78
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53
    '%'            shift, and go to state 54
    '!'            shift, and go to state 55
    '#'            shift, and go to state 56
    ':'            shift, and go to state 57

    expression   go to state 58
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67
    printlist    go to state 79
    printsep     go to state 69


state 21

   33 statement: WRITE .
   34          | WRITE . expression

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    $default  reduce using rule 33 (statement)

    expression   go to state 80
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 22

   25 statement: LIBRARY . CALL STRING
   26          | LIBRARY . SAVE STRING
   27          | LIBRARY . RUN STRING

    CALL  shift, and go to state 81
    SAVE  shift, and go to state 82
    RUN   shift, and go to state 83


state 23

    6 line: NUMBER @1 statements .

    $default  reduce using rule 6 (line)


state 24

    7 statements: statement .
    8           | statement . ';' statements

    ';'  shift, and go to state 84

    $default  reduce using rule 7 (statements)


state 25

    4 program: program error '\n' .

    $default  reduce using rule 4 (program)


state 26

    3 program: program '\n' line .

    $default  reduce using rule 3 (program)


state 27

   78 factor: STRING .

    $default  reduce using rule 78 (factor)


state 28

   76 factor: NUMBER .

    $default  reduce using rule 76 (factor)


state 29

   77 factor: NUMSTR .

    $default  reduce using rule 77 (factor)


state 30

   89 printlist: FMTSTR .

    $default  reduce using rule 89 (printlist)


state 31

   83 variable: VARIABLE_NAME .
   84         | VARIABLE_NAME . '(' exprlist ')'

    '('  shift, and go to state 85

    '('       [reduce using rule 83 (variable)]
    $default  reduce using rule 83 (variable)


state 32

   61 fn_1: FABS .

    $default  reduce using rule 61 (fn_1)


state 33

   63 fn_1: FATN .

    $default  reduce using rule 63 (fn_1)


state 34

   65 fn_1: FCOS .

    $default  reduce using rule 65 (fn_1)


state 35

   66 fn_1: FEXP .

    $default  reduce using rule 66 (fn_1)


state 36

   69 fn_1: FITR .

    $default  reduce using rule 69 (fn_1)


state 37

   70 fn_1: FLOG .

    $default  reduce using rule 70 (fn_1)


state 38

   59 fn_0: FRAN .

    $default  reduce using rule 59 (fn_0)


state 39

   73 fn_1: FSGN .

    $default  reduce using rule 73 (fn_1)


state 40

   74 fn_1: FSIN .

    $default  reduce using rule 74 (fn_1)


state 41

   72 fn_1: FSQT .

    $default  reduce using rule 72 (fn_1)


state 42

   62 fn_1: FADC .

    $default  reduce using rule 62 (fn_1)


state 43

   67 fn_1: FDIS .

    $default  reduce using rule 67 (fn_1)


state 44

   68 fn_1: FDXS .

    $default  reduce using rule 68 (fn_1)


state 45

   64 fn_1: FCOM .

    $default  reduce using rule 64 (fn_1)


state 46

   71 fn_1: FNEW .

    $default  reduce using rule 71 (fn_1)


state 47

   60 fn_0: FIN .

    $default  reduce using rule 60 (fn_0)


state 48

   75 fn_1: FOUT .

    $default  reduce using rule 75 (fn_1)


state 49

   93 printsep: ',' .

    $default  reduce using rule 93 (printsep)


state 50

   80 factor: '(' . expression ')'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression   go to state 86
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 51

   47 unary_op: '-' .

    $default  reduce using rule 47 (unary_op)


state 52

   81 factor: '[' . expression ']'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression   go to state 87
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 53

   82 factor: '<' . expression '>'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression   go to state 88
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 54

   91 printlist: '%' .

    $default  reduce using rule 91 (printlist)


state 55

   94 printsep: '!' .

    $default  reduce using rule 94 (printsep)


state 56

   95 printsep: '#' .

    $default  reduce using rule 95 (printsep)


state 57

   96 printsep: ':' .

    $default  reduce using rule 96 (printsep)


state 58

   85 printlist: expression .

    $default  reduce using rule 85 (printlist)


state 59

   35 expression: expression2 .
   37 expression2: expression2 . e2op expression3

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    '-'       [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)

    e2op  go to state 91


state 60

   36 expression2: expression3 .
   41 expression3: expression3 . term expression4

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93
    '^'  shift, and go to state 94

    $default  reduce using rule 36 (expression2)

    term  go to state 95


state 61

   40 expression3: expression4 .

    $default  reduce using rule 40 (expression3)


state 62

   46 expression4: unary_op . function

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    function  go to state 96
    fn_0      go to state 64
    fn_1      go to state 65
    factor    go to state 66
    variable  go to state 67


state 63

   45 expression4: function .

    $default  reduce using rule 45 (expression4)


state 64

   49 function: fn_0 .
   50         | fn_0 . '(' ')'
   51         | fn_0 . '[' ']'
   52         | fn_0 . '<' '>'
   53         | fn_0 . '(' expression ')'
   54         | fn_0 . '[' expression ']'
   55         | fn_0 . '<' expression '>'

    '('  shift, and go to state 97
    '['  shift, and go to state 98
    '<'  shift, and go to state 99

    '('       [reduce using rule 49 (function)]
    '['       [reduce using rule 49 (function)]
    '<'       [reduce using rule 49 (function)]
    $default  reduce using rule 49 (function)


state 65

   56 function: fn_1 . '(' expression ')'
   57         | fn_1 . '[' expression ']'
   58         | fn_1 . '<' expression '>'

    '('  shift, and go to state 100
    '['  shift, and go to state 101
    '<'  shift, and go to state 102


state 66

   48 function: factor .

    $default  reduce using rule 48 (function)


state 67

   79 factor: variable .

    $default  reduce using rule 79 (factor)


state 68

   10 statement: ASK printlist .
   86 printlist: printlist . expression
   88          | printlist . printsep
   90          | printlist . FMTSTR
   92          | printlist . '%'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    FMTSTR         shift, and go to state 103
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    ','            shift, and go to state 49
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53
    '%'            shift, and go to state 104
    '!'            shift, and go to state 55
    '#'            shift, and go to state 56
    ':'            shift, and go to state 57

    $default  reduce using rule 10 (statement)

    expression   go to state 105
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67
    printsep     go to state 106


state 69

   87 printlist: printsep .

    $default  reduce using rule 87 (printlist)


state 70

   12 statement: DO NUMBER .

    $default  reduce using rule 12 (statement)


state 71

   15 statement: ERASE NUMBER .

    $default  reduce using rule 15 (statement)


state 72

   14 statement: ERASE ALL .

    $default  reduce using rule 14 (statement)


state 73

   17 statement: FOR variable . '=' expression ',' expression
   18          | FOR variable . '=' expression ',' expression ',' expression

    '='  shift, and go to state 107


state 74

   21 statement: GOTO NUMBER .

    $default  reduce using rule 21 (statement)


state 75

   22 statement: IF '(' . expression ')' NUMBER
   23          | IF '(' . expression ')' NUMBER ',' NUMBER
   24          | IF '(' . expression ')' NUMBER ',' NUMBER ',' NUMBER

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression   go to state 108
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 76

   16 statement: MODIFY NUMBER .

    $default  reduce using rule 16 (statement)


state 77

   30 statement: SET variable . '=' expression

    '='  shift, and go to state 109


state 78

   32 statement: TYPE '$' .

    $default  reduce using rule 32 (statement)


state 79

   31 statement: TYPE printlist .
   86 printlist: printlist . expression
   88          | printlist . printsep
   90          | printlist . FMTSTR
   92          | printlist . '%'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    FMTSTR         shift, and go to state 103
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    ','            shift, and go to state 49
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53
    '%'            shift, and go to state 104
    '!'            shift, and go to state 55
    '#'            shift, and go to state 56
    ':'            shift, and go to state 57

    $default  reduce using rule 31 (statement)

    expression   go to state 105
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67
    printsep     go to state 106


state 80

   34 statement: WRITE expression .

    $default  reduce using rule 34 (statement)


state 81

   25 statement: LIBRARY CALL . STRING

    STRING  shift, and go to state 110


state 82

   26 statement: LIBRARY SAVE . STRING

    STRING  shift, and go to state 111


state 83

   27 statement: LIBRARY RUN . STRING

    STRING  shift, and go to state 112


state 84

    8 statements: statement ';' . statements

    ASK      shift, and go to state 8
    COMMENT  shift, and go to state 9
    DO       shift, and go to state 10
    ERASE    shift, and go to state 11
    FOR      shift, and go to state 12
    GO       shift, and go to state 13
    GOTO     shift, and go to state 14
    IF       shift, and go to state 15
    MODIFY   shift, and go to state 16
    QUIT     shift, and go to state 17
    RETURN   shift, and go to state 18
    SET      shift, and go to state 19
    TYPE     shift, and go to state 20
    WRITE    shift, and go to state 21
    LIBRARY  shift, and go to state 22

    $default  reduce using rule 9 (statement)

    statements  go to state 113
    statement   go to state 24


state 85

   84 variable: VARIABLE_NAME '(' . exprlist ')'

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression   go to state 114
    expression2  go to state 59
    expression3  go to state 60
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67
    exprlist     go to state 115


state 86

   80 factor: '(' expression . ')'

    ')'  shift, and go to state 116


state 87

   81 factor: '[' expression . ']'

    ']'  shift, and go to state 117


state 88

   82 factor: '<' expression . '>'

    '>'  shift, and go to state 118


state 89

   38 e2op: '+' .

    $default  reduce using rule 38 (e2op)


state 90

   39 e2op: '-' .

    $default  reduce using rule 39 (e2op)


state 91

   37 expression2: expression2 e2op . expression3

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression3  go to state 119
    expression4  go to state 61
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 92

   42 term: '*' .

    $default  reduce using rule 42 (term)


state 93

   43 term: '/' .

    $default  reduce using rule 43 (term)


state 94

   44 term: '^' .

    $default  reduce using rule 44 (term)


state 95

   41 expression3: expression3 term . expression4

    STRING         shift, and go to state 27
    NUMBER         shift, and go to state 28
    NUMSTR         shift, and go to state 29
    VARIABLE_NAME  shift, and go to state 31
    FABS           shift, and go to state 32
    FATN           shift, and go to state 33
    FCOS           shift, and go to state 34
    FEXP           shift, and go to state 35
    FITR           shift, and go to state 36
    FLOG           shift, and go to state 37
    FRAN           shift, and go to state 38
    FSGN           shift, and go to state 39
    FSIN           shift, and go to state 40
    FSQT           shift, and go to state 41
    FADC           shift, and go to state 42
    FDIS           shift, and go to state 43
    FDXS           shift, and go to state 44
    FCOM           shift, and go to state 45
    FNEW           shift, and go to state 46
    FIN            shift, and go to state 47
    FOUT           shift, and go to state 48
    '('            shift, and go to state 50
    '-'            shift, and go to state 51
    '['            shift, and go to state 52
    '<'            shift, and go to state 53

    expression4  go to state 120
    unary_op     go to state 62
    function     go to state 63
    fn_0         go to state 64
    fn_1         go to state 65
    factor       go to state 66
    variable     go to state 67


state 96

   46 expression4: unary_op function .

    $default  reduce using rule 46 (expression4)


state 97

   50 function: fn_0 '(' . ')'
   53         | fn_0 '(' . expression ')'
